--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div>
         <button id="add-commitment" class="button">add commitment</button>
+        <button id="add-commitment-cloud" class="button" href="https://europe-west4-arnacon-nl.cloudfunctions.net/gen-commitment-into-bucket">add commitment using cloud function</button>
         <p id="response"></p>
     </div>
     <div>
@@ -18,7 +19,11 @@
         <input placeholder="commitment"/>
         <p id="proof-response"></p>
     </div>
+    <div>
+        <button id="show-commitments" class="button">show commitments</button>
+        <p id="commitments-response"></p>
+    </div>
 
-    <script src="index1.js"></script>
+    <script src="client.js"></script>
 </body>
 </html>
