show commitments button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <div>
         <button id="add-commitment" class="button">add commitment</button>
-        <button id="add-commitment-cloud" class="button" href="https://europe-west4-arnacon-nl.cloudfunctions.net/gen-commitment-into-bucket">add commitment using cloud function</button>
+        <button id="add-commitment-cloud" class="button">add commitment using cloud function</button>
+
         <p id="response"></p>
     </div>
     <div>
