fixed add commitment

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </div>
     <div>
         <button id="show-commitments" class="button">show commitments</button>
-        <p id="commitments-response"></p>
+        <p id="commitments-response" style="word-wrap: break-word;
+        max-width: 500px;"></p>
     </div>
 
     <script src="client.js"></script>
